--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/main.css">
+
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,25 +22,129 @@
   </style>
 </head>
 <body>
-
-  Features
-  Company
-  Careers
-  About
-
-  Login
-  Register
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more
-  
+  <main>
+    <nav>
+      <div class="nav-container">
+        <div class="mobile-nav">
+          <img src="./images/logo.svg" alt="logo">
+          <button class="open"><img src="./images/icon-menu.svg" alt="menu"></button>
+        </div>
+        <div class="nav-body">
+          <ul class="nav-list">
+            <li class="listed-item">
+              <a href="#">Features</a>
+              <img src="./images/icon-arrow-down.svg" alt="arrow down" class="down-arrow">
+              <img src="./images/icon-arrow-up.svg" alt="arrow up" class="up-arrow hide-arrow">
+              <ul class="nested-list">
+                <li>
+                  <img src="./images/icon-todo.svg" alt="todo">
+                  Todo list
+                </li>
+                <li>
+                  <img src="./images/icon-calendar.svg" alt="calendar">
+                  Calendar
+                </li>
+                <li>
+                  <img src="./images/icon-reminders.svg" alt="reminder">
+                  Reminder
+                </li>
+                <li>
+                  <img src="./images/icon-planning.svg" alt="planning">
+                  Planning
+                </li>
+              </ul>
+            </li>
+            <li class="listed-item">
+              <a href="#">Company</a>
+              <img src="./images/icon-arrow-down.svg" alt="arrow down" class="down-arrow">
+              <img src="./images/icon-arrow-up.svg" alt="arrow up" class="up-arrow hide-arrow">
+              <ul class="nested-list">
+                <li>History</li>
+                <li>Our Team</li>
+                <li>Blog</li>
+              </ul>
+            </li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+          <div class="buttons">
+            <button class="login">Login</button>
+            <button class="register">Register</button>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <aside class="sidebar">
+      <div class="close-container">
+        <button class="close"><img src="./images/icon-close-menu.svg" alt="close-menu"></button>
+      </div>
+      <div class="sidebar-body">
+        <ul class="sidebar-list">
+          <li class="listed-item">
+            <a href="#">Features</a>
+            <img src="./images/icon-arrow-down.svg" alt="arrow down" class="down-arrow">
+            <img src="./images/icon-arrow-up.svg" alt="arrow up" class="up-arrow hide-arrow">
+            <ul class="nested-list">
+              <li>
+                <img src="./images/icon-todo.svg" alt="todo">
+                Todo list
+              </li>
+              <li>
+                <img src="./images/icon-calendar.svg" alt="calendar">
+                Calendar
+              </li>
+              <li>
+                <img src="./images/icon-reminders.svg" alt="reminder">
+                Reminder
+              </li>
+              <li>
+                <img src="./images/icon-planning.svg" alt="planning">
+                Planning
+              </li>
+            </ul>
+          </li>
+          <li class="listed-item">
+            <a href="#">Company</a>
+            <img src="./images/icon-arrow-down.svg" alt="arrow down" class="down-arrow">
+            <img src="./images/icon-arrow-up.svg" alt="arrow up" class="up-arrow hide-arrow">
+            <ul class="nested-list">
+              <li>History</li>
+              <li>Our Team</li>
+              <li>Blog</li>
+            </ul>
+          </li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+        <div class="buttons">
+          <button class="login">Login</button>
+          <button class="register">Register</button>
+        </div>
+      </div>
+    </aside>
+    <section class="content-wrapper">
+      <div class="hero-img"></div>
+      <div class="text">
+        <h1>Make remote work</h1>
+        <p>Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.</p>
+        <div class="learn-more">
+          <button class="learn-more-button">Learn more</button>
+        </div>
+      </div>
+      <div class="company-list">
+        <ul>
+          <li class="company"><img src="./images/client-databiz.svg"></li>
+          <li class="company"><img src="./images/client-audiophile.svg"></li>
+          <li class="company"><img src="./images/client-meet.svg"></li>
+          <li class="company"><img src="./images/client-maker.svg"></li>
+        </ul>
+      </div>
+    </section>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="./js/index.js" defer></script>
 </body>
 </html>
