finished the tablet layout

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a href="#">Features</a>
               <img src="./images/icon-arrow-down.svg" alt="arrow down" class="down-arrow">
               <img src="./images/icon-arrow-up.svg" alt="arrow up" class="up-arrow hide-arrow">
-              <ul class="nested-list">
+              <ul class="nested-list"  id="feature">
                 <li>
                   <img src="./images/icon-todo.svg" alt="todo">
                   Todo list
@@ -58,14 +58,14 @@
               <a href="#">Company</a>
               <img src="./images/icon-arrow-down.svg" alt="arrow down" class="down-arrow">
               <img src="./images/icon-arrow-up.svg" alt="arrow up" class="up-arrow hide-arrow">
-              <ul class="nested-list">
+              <ul class="nested-list"  id="company">
                 <li>History</li>
                 <li>Our Team</li>
                 <li>Blog</li>
               </ul>
             </li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">About</a></li>
+            <li class="item"><a href="#">Careers</a></li>
+            <li class="item"><a href="#">About</a></li>
           </ul>
           <div class="buttons">
             <button class="login">Login</button>
@@ -123,21 +123,25 @@
       </div>
     </aside>
     <section class="content-wrapper">
-      <div class="hero-img"></div>
-      <div class="text">
-        <h1>Make remote work</h1>
-        <p>Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.</p>
-        <div class="learn-more">
-          <button class="learn-more-button">Learn more</button>
-        </div>
+      <div class="img-wrapper">
+        <div class="hero-img"></div>
       </div>
-      <div class="company-list">
-        <ul>
-          <li class="company"><img src="./images/client-databiz.svg"></li>
-          <li class="company"><img src="./images/client-audiophile.svg"></li>
-          <li class="company"><img src="./images/client-meet.svg"></li>
-          <li class="company"><img src="./images/client-maker.svg"></li>
-        </ul>
+      <div class="text-wrapper">
+        <div class="text">
+          <h1>Make remote work</h1>
+          <p>Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.</p>
+          <div class="learn-more">
+            <button class="learn-more-button">Learn more</button>
+          </div>
+        </div>
+        <div class="company-list">
+          <ul>
+            <li class="company"><img src="./images/client-databiz.svg"></li>
+            <li class="company"><img src="./images/client-audiophile.svg"></li>
+            <li class="company"><img src="./images/client-meet.svg"></li>
+            <li class="company"><img src="./images/client-maker.svg"></li>
+          </ul>
+        </div>
       </div>
     </section>
   </main>
